[package]
name = "dungeon-crawler-carl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dcc"
path = "src/main.rs"

[dependencies]
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "handleapi", "winbase", "wincon"] }

[profile.release]
opt-level = 3
lto = true
strip = true
